GSTPlatform cannot play MP4 files with multiple audio tracks

XMLWordPrintable

      When trying to play an MP4 file with more than one audio track (three in this case) the player fails to initialize with the following log messages:
           [java] Debug (0:00:00:022): Initializing GSTPlatform
           [java] Warning (0:00:00:077): Name 'bin0' is not unique in bin 'pipeline0', not adding
           [java] Error (0:00:00:078): Failed to link AV parser to audio bin!
           [java] >>> MediaPlayer ERR: MediaException: UNKNOWN : com.sun.media.jfxmedia.MediaException: Could not create player! : com.sun.media.jfxmedia.MediaException: Could not create player!

            Assignee:
            Alexander Matveev
            Reporter:
            David Dehaven (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported: