8088722: GSTPlatform cannot play MP4 files with multiple audio tracks

Reviewed-by: kcr